--- a/Assets/Scripts/RyanChang/Imports/NaughtyAttributes-2.1.4/Scripts/Test/NaughtyAttributes.Test.asmdef
+++ b/Assets/Scripts/RyanChang/Imports/NaughtyAttributes-2.1.4/Scripts/Test/NaughtyAttributes.Test.asmdef
@@ -1,14 +1,16 @@
 {
-    "name": "NaughtyAttributes.Test",
+    "name": "RyanChang.Imports.NaughtyAttributes.Test",
+    "rootNamespace": "",
     "references": [
         "NaughtyAttributes.Core"
     ],
-    "optionalUnityReferences": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": []
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
