Fixed import error.

--- a/Assets/Scripts/RyanChang/Imports/NaughtyAttributes-2.1.4/Scripts/Editor/NaughtyAttributes.Editor.asmdef
+++ b/Assets/Scripts/RyanChang/Imports/NaughtyAttributes-2.1.4/Scripts/Editor/NaughtyAttributes.Editor.asmdef
@@ -2,7 +2,7 @@
     "name": "RyanChang.Imports.NaughtyAttributes.Editor",
     "rootNamespace": "",
     "references": [
-        "NaughtyAttributes.Core"
+        "RyanChang.Imports.NaughtyAttributes.Core"
     ],
     "includePlatforms": [
         "Editor"
