--- a/Assets/Scripts/RyanChang/Imports/NaughtyAttributes-2.1.4/Scripts/Test/NaughtyAttributes.Test.asmdef
+++ b/Assets/Scripts/RyanChang/Imports/NaughtyAttributes-2.1.4/Scripts/Test/NaughtyAttributes.Test.asmdef
@@ -2,7 +2,7 @@
     "name": "RyanChang.Imports.NaughtyAttributes.Test",
     "rootNamespace": "",
     "references": [
-        "NaughtyAttributes.Core"
+        "RyanChang.Imports.NaughtyAttributes.Core"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
